<resources>
    <string name="app_name" translatable="false">MultiCalculator</string>
    <string name="_0" translatable="false">0</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="add" translatable="false">+</string>
    <string name="subtract" translatable="false">-</string>
    <string name="multiply" translatable="false">×</string>
    <string name="divide" translatable="false">÷</string>
    <string name="mod" translatable="false">" mod "</string>
    <string name="div" translatable="false">" div "</string>
    <string name="dot" translatable="false">.</string>
    <string name="equal" translatable="false">=</string>
    <string name="general">General</string>
    <string name="settings">Settings</string>
    <string name="barDot" translatable="false">·</string>
    <string name="settings_theme">Theme</string>
    <string name="settings_language">Language</string>
    <string name="settings_lang_name">English</string>
    <string name="settings_addition">Addition</string>
    <string name="lang_english">English</string>
    <string name="lang_german">German</string>
    <string name="lang_russian">Russian</string>
    <string name="settings_subtraction">Subtraction</string>
    <string name="settings_multiplication">Multiplication</string>
    <string name="settings_division">Division</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="settings_mod">Residue from division</string>
    <string name="settings_integer_div">Integer division</string>
    <string name="attention_more_than_4_operators">You can\'t use less than 4 operators</string>
    <string name="power_of" translatable="false">^</string>
    <string name="settings_to_power">Exponentiation</string>
</resources>