<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_buttons_field"
    tools:context=".SettingsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/header_title"
                android:text="@string/app_name"
                android:textColor="?attr/colorOnPrimary"
                android:gravity="center"
                android:textSize="24sp"
                android:paddingVertical="20dp"
                android:textStyle="bold"
                android:layout_height="wrap_content"
                android:layout_width="match_parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginHorizontal="20dp"
                android:padding="15dp"
                android:background="@drawable/settings_block" >

                <LinearLayout
                    android:id="@+id/ll_language_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="@string/settings_language" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:text="@string/settings_lang_name"
                        android:gravity="center|end"
                        app:drawableRightCompat="@drawable/baseline_keyboard_arrow_right_24" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_theme_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:textSize="20sp"
                        android:text="@string/settings_theme" />

                    <TextView
                        android:id="@+id/tv_settings_theme_chosen"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:text="@string/theme_system"
                        android:gravity="center|end"
                        app:drawableRightCompat="@drawable/baseline_keyboard_arrow_right_24" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="20dp"
                android:padding="15dp"
                android:background="@drawable/settings_block" >

                <LinearLayout
                    android:id="@+id/ll_addition_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_addition_settings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:textSize="20sp"
                        android:text="@string/settings_addition"
                        android:layout_weight="1000" />

                    <CheckBox
                        android:id="@+id/cb_addition"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_subtraction_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_subtraction_settings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:textSize="20sp"
                        android:text="@string/settings_subtraction"
                        android:layout_weight="1000" />

                    <CheckBox
                        android:id="@+id/cb_subtraction"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_multiplication_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_multiplication_settings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:textSize="20sp"
                        android:text="@string/settings_multiplication"
                        android:layout_weight="1000" />

                    <CheckBox
                        android:id="@+id/cb_multiplication"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_division_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_division_settings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:textSize="20sp"
                        android:text="@string/settings_division"
                        android:layout_weight="1000" />

                    <CheckBox
                        android:id="@+id/cb_division"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_power_of_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_power_of_settings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:textSize="20sp"
                        android:text="@string/settings_to_power"
                        android:layout_weight="1000" />

                    <CheckBox
                        android:id="@+id/cb_power_of"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_mod_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="10dp"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tv_mod_settings"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:gravity="start|center"
                        android:textSize="20sp"
                        android:text="@string/settings_mod"
                        android:layout_weight="1000" />

                    <CheckBox
                        android:id="@+id/cb_mod"
                        android:layout_width="wrap_content"
                        android:layout_height="24sp"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="1" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>