<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/main_fragment"
        android:name="ru.nippyfox.multicalculator.GeneralFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/custom_bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/custom_bottom_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="?attr/backgroundInsetEnd"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/custom_bottom_bar_dots"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.04"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/main_fragment">

        <TextView
            android:id="@+id/btn_bottom_general"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:textStyle="bold"
            android:text="@string/general"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/btn_bottom_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_weight="1"
            android:gravity="center|bottom"
            android:text="@string/settings"
            android:textColor="?attr/colorOnPrimary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/custom_bottom_bar_dots"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:background="?attr/backgroundInsetEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.02"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/custom_bottom_bar">
        <TextView
            android:id="@+id/dot_general"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/barDot"
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary" />

        <TextView
            android:id="@+id/dot_settings"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginTop="-5dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text=""
            android:textStyle="bold"
            android:textColor="?attr/colorOnPrimary" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>